Work in progress

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="container container-fluid">
-        <header class="p-3 bg-body-tertiary">
+        <header class="p-3 bg-body-tertiary" data-pp-number="1" data-pp-content="This is the header">
             <h1 class="bg-body-tertiary">PagePilot Tests</h1>
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
@@ -128,7 +128,7 @@
                     <p>&copy; 2025 CtrlO ltd.</p>
                 </div>
                 <div class="col">
-                    <button class="btn btn-success" type="button">Click me</button>
+                    <button class="btn btn-success" type="button" id="start-tour">Click me</button>
                 </div>
             </div>
     </footer>
